// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCard creates correct snapshot for Jupyer stack type 1`] = `
<div
  className="StackCard-cardDiv-1"
>
  <div
    className="StackCard-imageDiv-2"
  >
    <img
      alt="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
      className="StackCard-cardImage-8"
      src="jupyter-logo.svg"
    />
  </div>
  <div
    className="StackCard-textDiv-3"
  >
    <div
      className="StackCard-displayNameContainer-5"
    >
      <WithStyles(ForwardRef(Typography))
        className="StackCard-displayName-4"
        noWrap={true}
        variant="h5"
      >
        name1
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfo />
    </div>
    <WithStyles(ForwardRef(Tooltip))
      placement="bottom-start"
      title="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
    >
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="body1"
      >
        Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <div
    className="StackCard-actionsDiv-6"
  >
    <WithStyles(StackCardActions)
      deletePermission="delete"
      deleteStack={[MockFunction deleteStack]}
      editPermission="edit"
      openPermission="open"
      openStack={[MockFunction openStack]}
      restartStack={[MockFunction restartStack]}
      shareStack={[MockFunction shareStack]}
      stack={
        Object {
          "displayName": "name1",
          "id": "100",
          "shared": "private",
          "status": undefined,
          "type": "jupyter",
        }
      }
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    />
  </div>
</div>
`;

exports[`StackCard creates correct snapshot for Zeppelin stack type 1`] = `
<div
  className="StackCard-cardDiv-1"
>
  <div
    className="StackCard-imageDiv-2"
  >
    <img
      alt="Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more."
      className="StackCard-cardImage-8"
      src="zeppelin-logo.svg"
    />
  </div>
  <div
    className="StackCard-textDiv-3"
  >
    <div
      className="StackCard-displayNameContainer-5"
    >
      <WithStyles(ForwardRef(Typography))
        className="StackCard-displayName-4"
        noWrap={true}
        variant="h5"
      >
        name1
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfo />
    </div>
    <WithStyles(ForwardRef(Tooltip))
      placement="bottom-start"
      title="Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more."
    >
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="body1"
      >
        Web-based notebook that enables data-driven, interactive data analytics and collaborative documents with SQL, Scala and more.
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <div
    className="StackCard-actionsDiv-6"
  >
    <WithStyles(StackCardActions)
      deletePermission="delete"
      deleteStack={[MockFunction deleteStack]}
      editPermission="edit"
      openPermission="open"
      openStack={[MockFunction openStack]}
      restartStack={[MockFunction restartStack]}
      shareStack={[MockFunction shareStack]}
      stack={
        Object {
          "displayName": "name1",
          "id": "100",
          "shared": "private",
          "status": undefined,
          "type": "zeppelin",
        }
      }
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    />
  </div>
</div>
`;

exports[`StackCard creates correct snapshot for glusterfs stack type 1`] = `
<div
  className="StackCard-cardDiv-1"
>
  <div
    className="StackCard-imageDiv-2"
  >
    <WithStyles(ForwardRef(Icon))
      className="StackCard-cardIcon-9"
    >
      save
    </WithStyles(ForwardRef(Icon))>
  </div>
  <div
    className="StackCard-textDiv-3"
  >
    <div
      className="StackCard-displayNameContainer-5"
    >
      <WithStyles(ForwardRef(Typography))
        className="StackCard-displayName-4"
        noWrap={true}
        variant="h5"
      >
        name1
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfo />
    </div>
    <WithStyles(ForwardRef(Tooltip))
      placement="bottom-start"
      title="A description of the Data Store purpose"
    >
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="body1"
      >
        A description of the Data Store purpose
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <div
    className="StackCard-actionsDiv-6"
  >
    <WithStyles(StackCardActions)
      deletePermission="delete"
      deleteStack={[MockFunction deleteStack]}
      editPermission="edit"
      openPermission="open"
      openStack={[MockFunction openStack]}
      restartStack={[MockFunction restartStack]}
      shareStack={[MockFunction shareStack]}
      stack={
        Object {
          "displayName": "name1",
          "id": "100",
          "shared": "private",
          "status": undefined,
          "type": "GLUSTERFS",
        }
      }
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    />
  </div>
</div>
`;

exports[`StackCard should show status ad buttons when status is ready 1`] = `
<div
  className="StackCard-cardDiv-1"
>
  <div
    className="StackCard-imageDiv-2"
  >
    <img
      alt="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
      className="StackCard-cardImage-8"
      src="jupyter-logo.svg"
    />
  </div>
  <div
    className="StackCard-textDiv-3"
  >
    <div
      className="StackCard-displayNameContainer-5"
    >
      <WithStyles(ForwardRef(Typography))
        className="StackCard-displayName-4"
        noWrap={true}
        variant="h5"
      >
        name1
      </WithStyles(ForwardRef(Typography))>
      <ResourceInfo />
    </div>
    <WithStyles(ForwardRef(Tooltip))
      placement="bottom-start"
      title="Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text."
    >
      <WithStyles(ForwardRef(Typography))
        noWrap={true}
        variant="body1"
      >
        Web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text.
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Tooltip))>
  </div>
  <div
    className="StackCard-actionsDiv-6"
  >
    <div
      className="StackCard-statusDiv-7"
    >
      <WithStyles(StackStatus)
        status="ready"
      />
    </div>
    <WithStyles(StackCardActions)
      deletePermission="delete"
      deleteStack={[MockFunction deleteStack]}
      editPermission="edit"
      openPermission="open"
      openStack={[MockFunction openStack]}
      restartStack={[MockFunction restartStack]}
      shareStack={[MockFunction shareStack]}
      stack={
        Object {
          "displayName": "name1",
          "id": "100",
          "shared": "private",
          "status": "ready",
          "type": "jupyter",
        }
      }
      userPermissions={
        Array [
          "open",
          "delete",
          "edit",
        ]
      }
    />
  </div>
</div>
`;
